GNOME Bugzilla – Bug 643478
GApplication::local_command_line vfunc documentation seems wrong.
Last modified: 2011-03-04 08:15:10 UTC
The arguments of the local_command_line() vfunc need more documentation. For instance, the char*** arguments parameter probably points to a null-terminated char**, so that should be noted. And the int* exit_status parameter should be documented too.
A link to the documentation: http://library.gnome.org/devel/gio/unstable/GApplication.html#GApplicationClass.local-command-line
Thanks for the clarification, Mathias. These were the changes: http://git.gnome.org/browse/glib/commit/?id=1a6455b7858ea16f314949ceed9a128ad46267b2 http://git.gnome.org/browse/glib/commit/?id=3c7203cf1ac0841e4613f40020f721f9c71ec0a4
That last one should be: http://git.gnome.org/browse/glib/commit/?id=1485871ed5e8e9ce70b088cfedae4012032e5dca (Just taking notes for myself)